Bug 1259949 - Set the CARET_ASSOCIATE_AFTER hint also when we collapse just after a text node that ends with a significant newline.  r=ehsan

nsCaret::GetFrameAndOffset may return a text frame also when aParentNode
is the container of a text node and aOffset is just after it.  In this
case we also want CARET_ASSOCIATE_AFTER if the text ends with
a significant newline.  (follow-up from bug 1258308)