layout/generic/nsSelection.cpp
@@ -4937,15 +4937,17 @@ Selection::Collapse(nsINode& aParentNode, uint32_t aOffset, ErrorResult& aRv)
   mFrameSelection->ClearTableCellSelection();
 
   // Hack to display the caret on the right line (bug 1237236).
-  if (aParentNode.IsContent()) {
-    nsTextFrame* f = do_QueryFrame(aParentNode.AsContent()->GetPrimaryFrame());
-    if (f) {
-      int32_t frameOffset;
-      f = do_QueryFrame(nsCaret::GetFrameAndOffset(this, &aParentNode,
-                                                   aOffset, &frameOffset));
-    }
+  if (mFrameSelection->GetHint() != CARET_ASSOCIATE_AFTER &&
+      aParentNode.IsContent()) {
+    int32_t frameOffset;
+    nsTextFrame* f =
+      do_QueryFrame(nsCaret::GetFrameAndOffset(this, &aParentNode,
+                                               aOffset, &frameOffset));
     if (f && f->IsAtEndOfLine() && f->HasSignificantTerminalNewline()) {
-      if (f->GetContentEnd() == int32_t(aOffset)) {
+      if ((aParentNode.AsContent() == f->GetContent() &&
+           f->GetContentEnd() == int32_t(aOffset)) ||
+          (&aParentNode == f->GetContent()->GetParentNode() &&
+           aParentNode.IndexOf(f->GetContent()) + 1 == int32_t(aOffset))) {
         mFrameSelection->SetHint(CARET_ASSOCIATE_AFTER);
       }
     }
